recursion.lessons.recursion.koch.Koch.scala.error
Koch:19: error: not enough arguments for method snowSide: (levels: Int, length: Double)Unit.
Unspecified value parameter length.
  return snowSide((levels,length))
                 ^